FIX: footer media alignment and width

--- a/src/container/Footer/Footer.scss
+++ b/src/container/Footer/Footer.scss
@@ -19,6 +19,7 @@
 
     .footer__media {
       padding: 3rem 0.5rem !important;
+      width: 200px;
 
       h3 {
         color: var(--foreground) !important;
